update generate page with species selection, fix grid alignments, font importing

--- a/src/main/styles/base.scss
+++ b/src/main/styles/base.scss
@@ -125,3 +125,9 @@ a {
 		color: $linkActive;
 	}
 }
+
+h1,h2,h3,h4,h5,h6 {
+	&.subtitle {
+		color: $mutedText;
+	}
+}
